--- a/received.html
+++ b/received.html
@@ -273,7 +273,7 @@
                         <div class="page-header">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <h3>RFID provider from admin panel</h3>
+                                    <h3>Received RFID </h3>
                                 </div>
                             </div>
                         </div>
@@ -289,6 +289,7 @@
                                             <div class="col-md-4"></div>
                                             <div class="col-md-4">
                                                 <div class="mb-3">
+                                                    <h3 style="text-align: center;">Received RFID </h3>
                                                     <h3
                                                         style="
                                                             text-align: center;
@@ -305,198 +306,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row">
-                                            <div class="col-md-12">
-                                                <div
-                                                    id="ticketInfo"
-                                                    style="display: none"
-                                                >
-                                                    <div
-                                                        class="container-fluid"
-                                                    >
-                                                        <div
-                                                            class="page-header"
-                                                        >
-                                                            <div class="row">
-                                                                <div
-                                                                    class="col-sm-6"
-                                                                >
-                                                                    <h3>
-                                                                        Ticket
-                                                                        Details
-                                                                    </h3>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <!-- Container-fluid starts-->
-                                                    <div
-                                                        class="container-fluid"
-                                                    >
-                                                        <div class="row">
-                                                            <!-- Feature Unable /Disable Order Starts-->
-                                                            <div
-                                                                class="col-sm-12"
-                                                            >
-                                                                <div
-                                                                    class="card"
-                                                                >
-                                                                    <div
-                                                                        class="card-body"
-                                                                    >
-                                                                        <div
-                                                                            class="table-responsive"
-                                                                        >
-                                                                            <table
-                                                                                class="display"
-                                                                                id="basic-2"
-                                                                            >
-                                                                                <thead>
-                                                                                    <tr>
-                                                                                        <th>
-                                                                                            Ser
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Customer
-                                                                                            Name
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Mobile
-                                                                                            Number
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Date
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Ticket
-                                                                                            Number
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Total
-                                                                                            Paid
-                                                                                        </th>
-                                                                                    </tr>
-                                                                                </thead>
-                                                                                <tbody>
-                                                                                    <tr>
-                                                                                        <td>
-                                                                                            1
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            Major
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            0172395780941
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            21/3/2023
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            01
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            100
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                    <tr>
-                                                                                        <td>
-                                                                                            1
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            Major
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            0172395780941
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            21/3/2023
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            01
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            100
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                </tbody>
-                                                                            </table>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <!-- Feature Unable /Disable Ends-->
-                                                        </div>
-                                                    </div>
-                                                    <!-- Container-fluid Ends-->
-                                                    <!-- input field start -->
-                                                    <div
-                                                        class="container-fluid"
-                                                    >
-                                                        <div
-                                                            class="page-header"
-                                                        >
-                                                            <div class="row">
-                                                                <div
-                                                                    class="col-sm-6"
-                                                                >
-                                                                    <h3>
-                                                                        RFID
-                                                                        Number
-                                                                    </h3>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <!-- Container-fluid starts-->
-                                                    <div
-                                                        class="container-fluid"
-                                                    >
-                                                        <div class="row">
-                                                            <!-- Feature Unable /Disable Order Starts-->
-                                                            <div
-                                                                class="col-sm-12"
-                                                            >
-                                                                <div
-                                                                    class="card"
-                                                                >
-                                                                    <div
-                                                                        class="card-body"
-                                                                    >
-                                                                        <div>
-                                                                            <label
-                                                                                class="form-label"
-                                                                                >RFID
-                                                                                Number</label
-                                                                            >
-                                                                            <input
-                                                                                class="form-control"
-                                                                                type="text"
-                                                                                placeholder=""
-                                                                                required=""
-                                                                            />
-                                                                        </div>
-                                                                        <div
-                                                                            class="modal-footer"
-                                                                        >
-                                                                            <button
-                                                                                class="btn btn-primary"
-                                                                                type="button"
-                                                                                id="ticketAssignBtn"
-                                                                            >
-                                                                                Assign
-                                                                            </button>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <!-- Feature Unable /Disable Ends-->
-                                                        </div>
-                                                    </div>
-                                                    <!-- Container-fluid Ends-->
-                                                    <!-- input end -->
-                                                </div>
-                                            </div>
-                                        </div>
+                                      
                                     </div>
                                 </div>
                             </div>
@@ -548,12 +358,7 @@
         <!-- login js-->
         <!-- Plugin used-->
         <script>
-            $(document).on("keyup", "#qrScanInpt", function () {
-                $("#ticketInfo").show();
-            });
-            $(document).on("click", "#ticketAssignBtn", function () {
-                location.reload();
-            });
+          
 
             // $(document).on("click", "#showTicketsBtn", function () {
             //     $("#ticketsTable").show();
