--- a/ownerview.html
+++ b/ownerview.html
@@ -173,6 +173,36 @@
                           <li><a class="nav-link menu-title link-nav" href="datatable-basic-init.html"><i data-feather="user-plus"></i><span>Visitor QR Code Scanner And Report Show</span></a></li>
                           <li><a class="nav-link menu-title link-nav" href="rfid.html"><i data-feather="user-plus"></i><span>RFID Management</span></a></li>
                           <li><a class="nav-link menu-title link-nav" href="ownerview.html"><i data-feather="user-plus"></i><span>Officer (Plot owner) view</span></a></li>
+                          <li>
+                            <a
+                                class="nav-link menu-title link-nav"
+                                href="received.html"
+                                ><i data-feather="user-plus"></i
+                                ><span
+                                    >Received RFID</span
+                                ></a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                class="nav-link menu-title link-nav"
+                                href="report.html"
+                                ><i data-feather="user-plus"></i
+                                ><span
+                                    >Report</span
+                                ></a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                class="nav-link menu-title link-nav"
+                                href="turnreport.html"
+                                ><i data-feather="user-plus"></i
+                                ><span
+                                    >Turnstile Report</span
+                                ></a
+                            >
+                        </li>
                          
                           
                           <!--  -->
