--- a/received.html
+++ b/received.html
@@ -257,6 +257,26 @@
                                             ></a
                                         >
                                     </li>
+                                    <li>
+                                        <a
+                                            class="nav-link menu-title link-nav"
+                                            href="report.html"
+                                            ><i data-feather="user-plus"></i
+                                            ><span
+                                                >Report</span
+                                            ></a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            class="nav-link menu-title link-nav"
+                                            href="turnreport.html"
+                                            ><i data-feather="user-plus"></i
+                                            ><span
+                                                >Turnstile Report</span
+                                            ></a
+                                        >
+                                    </li>
 
                                     <!--  -->
                                 </ul>
