--- a/rfidprovider.html
+++ b/rfidprovider.html
@@ -257,6 +257,26 @@
                                             ></a
                                         >
                                     </li>
+                                    <li>
+                                        <a
+                                            class="nav-link menu-title link-nav"
+                                            href="report.html"
+                                            ><i data-feather="user-plus"></i
+                                            ><span
+                                                >Report</span
+                                            ></a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            class="nav-link menu-title link-nav"
+                                            href="turnreport.html"
+                                            ><i data-feather="user-plus"></i
+                                            ><span
+                                                >Turnstile Report</span
+                                            ></a
+                                        >
+                                    </li>
 
                                     <!--  -->
                                 </ul>
@@ -335,95 +355,28 @@
                                                     >
                                                         <div class="row">
                                                             <!-- Feature Unable /Disable Order Starts-->
-                                                            <div
-                                                                class="col-sm-12"
-                                                            >
-                                                                <div
-                                                                    class="card"
-                                                                >
-                                                                    <div
-                                                                        class="card-body"
-                                                                    >
-                                                                        <div
-                                                                            class="table-responsive"
-                                                                        >
-                                                                            <table
-                                                                                class="display"
-                                                                                id="basic-2"
-                                                                            >
-                                                                                <thead>
-                                                                                    <tr>
-                                                                                        <th>
-                                                                                            Ser
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Customer
-                                                                                            Name
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Mobile
-                                                                                            Number
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Date
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Ticket
-                                                                                            Number
-                                                                                        </th>
-                                                                                        <th>
-                                                                                            Total
-                                                                                            Paid
-                                                                                        </th>
-                                                                                    </tr>
-                                                                                </thead>
-                                                                                <tbody>
-                                                                                    <tr>
-                                                                                        <td>
-                                                                                            1
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            Major
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            0172395780941
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            21/3/2023
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            01
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            100
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                    <tr>
-                                                                                        <td>
-                                                                                            1
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            Major
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            0172395780941
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            21/3/2023
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            01
-                                                                                        </td>
-                                                                                        <td>
-                                                                                            100
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                </tbody>
-                                                                            </table>
-                                                                        </div>
+                                                            <div class="col-sm-10">
+                                                                <div class="card">
+                                                                 
+                                                                  <div class="card-body bg-success">
+                                                                    <div class="row details">
+                                                                      <h5 class="col-6"><span>Ser </span></h5>
+                                                                      <h5 class="col-6 ">1 </h5>
+                                                                      <h5 class="col-6"> <span>Customer Name</span></h5>
+                                                                      <h5 class="col-6 ">Major</h5>
+                                                                      <h5 class="col-6"> <span>Mobile Number</span></h5>
+                                                                      <h5 class="col-6 ">0172395780941</h5>
+                                                                      <h5 class="col-6"> <span>Date</span></h5>
+                                                                      <h5 class="col-6 ">21/3/2023</h5>
+                                                                      <h5 class="col-6"> <span>Ticket Number</span></h5>
+                                                                      <h5 class="col-6 ">01</h5>
+                                                                      <h5 class="col-6"> <span>Total Paid</span></h5>
+                                                                      <h5 class="col-6 ">100</h5>
                                                                     </div>
+                                                                
+                                                                  </div>
                                                                 </div>
-                                                            </div>
+                                                              </div>
                                                             <!-- Feature Unable /Disable Ends-->
                                                         </div>
                                                     </div>
